Thu Jan  9 17:46:36 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/Thrasher/ParticipantTask.h:
        * tests/DCPS/Thrasher/ParticipantTask.cpp:
        * tests/DCPS/Thrasher/Publisher.cpp:
        * tests/DCPS/Thrasher/Subscriber.cpp:
        * tests/DCPS/Thrasher/run_test.pl:

          Serialize Entity creation for the test threads.

Thu Jan  9 16:30:31 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/LargeSample/run_test.pl:

          Enable Builtin Topics.  This stabilizes the test on some
          platforms.

Thu Jan  9 00:18:43 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/DCPS/TCPListenerTest/run_test.pl:

          Specify correct command line argument for zero copy.

Wed Jan  8 23:41:25 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/tcp/TcpSendStrategy.cpp:

          Include ThreadSynch.h for when inlining is disabled.

Wed Jan  8 19:54:37 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/framework/ReactorSynch.inl:
        * dds/DCPS/transport/framework/ReactorSynch.cpp:
        * dds/DCPS/transport/framework/ScheduleOutputHandler.cpp:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
        * dds/DCPS/transport/tcp/TcpConnection.cpp:
        * dds/DCPS/transport/tcp/TcpSendStrategy.cpp:
        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.cpp:
        * performance-tests/DCPS/TCPListenerTest/Writer.cpp:

          Converted development diagnostics to debug messages.

Wed Jan  8 04:40:24 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.h:

          Left out of last checkin.  Declares the new mode() and synch()
          accessors.

Wed Jan  8 02:59:39 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/framework/PerConnectionSynch.h: