@@ -21,7 +21,7 @@ public:
   int svc();
 
 private:
-  typedef ACE_SYNCH_MUTEX    LockType;
+  typedef ACE_SYNCH_MUTEX     LockType;
   typedef ACE_Guard<LockType> GuardType;
 
   LockType lock_;
